--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://lib.baomitu.com/mint-ui/2.2.13/style.min.css"
+    />
+    <title><%= webpackConfig.name %></title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
+    <script src="https://lib.baomitu.com/vue/2.6.10/vue.min.js"></script>
+    <script src="https://lib.baomitu.com/vuex/3.1.0/vuex.min.js"></script>
+    <script src="https://lib.baomitu.com/vue-router/3.0.4/vue-router.min.js"></script>
+    <script src="https://lib.baomitu.com/moment.js/2.24.0/moment.min.js"></script>
+    <!-- mint-ui 依赖vue.js -->
+    <script src="https://lib.baomitu.com/mint-ui/2.2.13/index.js"></script>
+    <script src="https://lib.baomitu.com/axios/0.18.0/axios.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
